More spacing fixes.

--- a/assets/less/classes/news/preview.less
+++ b/assets/less/classes/news/preview.less
@@ -20,6 +20,7 @@
 
     &__text {
         flex: 1 1 auto;
+        padding: 2px 5px;
     }
 
     &__info {
