--- a/assets/less/classes/profile/header.less
+++ b/assets/less/classes/profile/header.less
@@ -1,7 +1,7 @@
 .profile__header {
     display: flex;
     flex-direction: column;
-    margin: 2px 0;
+    margin-bottom: 2px;
     color: #fff;
     text-shadow: 0 1px 4px #111;
     box-shadow: 0 1px 4px #111;
